--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "postgres": "^3.3.3"
+    "postgres": "^3.3.3",
+    "svelte-routing": "^1.6.0"
   }
 }
